--- a/templates/base.html
+++ b/templates/base.html
@@ -8,7 +8,10 @@
   <link rel="shortcut icon" href="{% static 'image/favicon.ico' %}" type="image/x-icon">
 
   <link rel="stylesheet" href="{% static 'css/semantic.min.css' %}">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.8.1/slick.min.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.8.1/slick-theme.min.css">
   <link rel="stylesheet" href="{% static 'css/base.css' %}">
+  {% block extra_css %}{% endblock %}
 
   <title>JyobiMart</title>
 </head>
@@ -26,7 +29,7 @@
             <form id="searchForm" class="ui action input" action="#" method="get">
               <select name="c" class="ui compact selection dropdown">
                 <option selected="" value="0">すべてのカテゴリー</option>
-                {% for category in categories %}
+                {% for category in request.categories %}
                   <option value="{{ category.id }}">{{ category.name }}</option>
                 {% endfor %}
               </select>
@@ -38,7 +41,22 @@
           </div>
 
           {% if request.user.is_authenticated %}
-          <a href="{% url 'account:user_logout' %}" class="ui item">ログアウト</a>
+          <div class="ui dropdown item">
+            {{ request.user.username }}さん
+            <i class="dropdown icon"></i>
+            <div class="menu">
+              <a href="#" class="item">アカウント設定</a>
+              <a href="#" class="item">注文履歴</a>
+              <hr>
+              <a href="{% url 'account:user_logout' %}" class="item">ログアウト</a>
+            </div>
+          </div>
+
+          <a href="#" class="ui item">
+            <i class="ui shopping cart icon"></i>
+            {{ request.cart_count|default:0 }}
+          </a>
+
           {% else %}
           <a href="{% url 'account:user_login' %}" class="ui item">ログイン</a>
           {% endif %}
@@ -50,10 +68,9 @@
   {% block contents %}
   {% endblock %}
 
-  <footer class="ui inverted footer segment">
+  <footer>
     <div class="ui container">
       <div class="ui inverted divided equal height grid">
-
         <div class="four wide column">
           <h4 class="ui inverted header">JyobiMartについて</h4>
           <div class="ui inverted link list">
@@ -80,6 +97,8 @@
     </div>
   </footer>
 
+  <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.8.1/slick.min.js"></script>
   <script src="{% static 'js/semantic.min.js' %}"></script>
   <script>
     $('.ui.dropdown').dropdown();
@@ -88,8 +107,21 @@
         $("#searchForm").submit();
       });
     });
+
+    $(document).ready(function(){
+      $('.products').slick({
+        dots: true,
+        infinite: false,
+        arrows: true,
+        speed: 300,
+        slidesToShow: 5,
+        slidesToScroll: 5,
+      });
+    });
   </script>
+
   {% block extra_js %}
   {% endblock %}
+
 </body>
 </html>
