--- a/templates/account/login.html
+++ b/templates/account/login.html
@@ -40,6 +40,9 @@
           </div>
         </div>
       </div>
+
+      <a href="{% url 'account:signup' %}">新規登録はこちら</a>
+
     </div>
   </div>
 </body>
